tests/A2/reject/sameParamName.ul
void main(){

}

int foo(int x, string x){
    
}